--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -2,6 +2,18 @@ body {
   overflow-x: hidden;
 }
 
+.nav-item li {
+  padding: 5px;
+}
+
+.itemsMenu {
+  border-radius: 8px;
+}
+.itemsMenu:hover {
+  background-color: rgb(223, 228, 234);
+  border-radius: 8px;
+}
+
 #VimeoLogo {
   width: 80px;
 }
@@ -30,6 +42,80 @@ body {
 #btnUnirse #divFlecha {
   background-color: rgb(37, 209, 254);
   border-radius: 7px;
+}
+
+#btnAzul #divFlecha {
+  background-color: rgb(19, 167, 206);
+  border-radius: 7px;
+}
+
+#btnAzul {
+  background-color: rgb(37, 209, 254);
+  color: #000; /* El texto siempre será negro */
+  position: relative;
+  overflow: hidden;
+  border: none;
+  border-radius: 8px;
+  margin-top: 5px;
+  font-size: 17px;
+}
+
+#btnAzul:hover {
+  background: linear-gradient(
+    to left,
+    rgb(19, 167, 206) 50%,
+    rgb(37, 209, 254) 50%
+  );
+  background-size: 200% 100%;
+  background-position: right;
+  transition: background-position 0.45s ease;
+  right: 0;
+
+  #divFlecha {
+    background-color: rgb(37, 209, 254);
+    transition: background-color 0.45s ease;
+
+    .segundaFlecha {
+      transform: translateX(100%);
+      transition: transform 0.45s ease;
+    }
+    .primeraFlechaAzul {
+      transform: translateX(200%);
+      transition: transform 0.45s ease;
+    }
+  }
+}
+
+#btnAzul:not(:hover) {
+  background: linear-gradient(
+    to left,
+    rgb(19, 167, 206) 50%,
+    rgb(37, 209, 254) 50%
+  );
+  background-size: 200% 100%;
+  background-position: left;
+  transition: background-position 0.45s ease;
+
+  #divFlecha {
+    background-color: rgb(19, 167, 206);
+
+    transition: background-color 0.45s ease;
+
+    .segundaFlecha {
+      transform: translateX(0%);
+      transition: transform 0.45s ease;
+    }
+    .primeraFlechaAzul {
+      transform: translateX(-105%);
+      transition: opacity 0.45s ease, transform 0.45s ease;
+    }
+  }
+}
+
+#divFlecha {
+  overflow: hidden;
+  position: relative;
+  border-radius: 6px;
 }
 
 #divFlecha2 {
@@ -78,16 +164,19 @@ body {
   }
 }
 
-#divFlecha {
-  overflow: hidden;
-  position: relative;
-  border-radius: 6px;
-}
-
 .primeraFlecha {
   padding-left: -200px;
   position: absolute;
-  padding-top: 2px;
+}
+
+.primeraFlechaAzul {
+  padding-left: -200px;
+  position: absolute;
+}
+
+#divFlecha .primeraFlechaAzul {
+  margin-left: -20px;
+  position: absolute;
 }
 
 #btnUnirse:not(:hover) {
@@ -142,12 +231,16 @@ body {
   margin-bottom: 100px;
 }
 
-.producto:hover {
-  transition: all 0.6s ease;
-
-  .flecha1 {
-    transform: rotate(180deg);
-    transition: transform 0.6s ease;
+.menuFlecha {
+  .flechaMenu {
+    transition: transform 0.2s ease;
+    display: inline-block;
+    font-size: 12px;
+    margin-left: 15px;
+    font-weight: bold;
+  }
+  &:hover .flechaMenu {
+    transform: rotate(-180deg);
   }
 }
 
@@ -164,6 +257,9 @@ h1 {
 
 .alzarbtn {
   margin-top: -6px;
+}
+#vimeoCentral {
+  border-radius: 20px;
 }
 
 #banner {
@@ -239,23 +335,22 @@ h1 {
   opacity: 1;
 }
 
-.btn-unirse {
-  transition: transform 0.3s ease;
-}
-
-.btn-unirse:hover {
-  transform: scale(1.05);
-}
-
 #dropdownMenu {
-  margin-top: 25px;
-  margin-left: -110px;
+  margin-top: 5px;
+  margin-left: -100px;
+}
+#dropdownMenu2 {
+  margin-top: 5px;
+  margin-left: -220px;
+}
+#dropdownMenu3 {
+  margin-top: 5px;
+  margin-left: -352px;
 }
 
 #menuDropdown {
   width: 1280px;
-  margin-left: 10px;
-  margin-top: 50px;
+  margin-top: 10px;
   height: 480px;
   display: flex;
   align-items: center;
@@ -267,4 +362,28 @@ h1 {
     font-weight: bold;
     text-align: center;
   }
+}
+
+#menuDropdown3 {
+  width: 1280px;
+  margin-top: -35px;
+  height: 480px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  span {
+    margin-left: 10px;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-align: center;
+  }
+}
+
+#verDemostracionIcono {
+  position: absolute;
+  top: 42%;
+  left: 61%;
+  color: rgb(37, 209, 254);
+  font-size: 60px;
 }
