--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -265,14 +265,11 @@ h1 {
 #banner {
   position: relative;
   color: #f5f5f5;
-  background-image: url("../public/banner.png");
   width: 110%;
+  background-image: url("../public/banner.png");
   padding-top: 70px;
   margin-left: -15px;
-  background-color: #f5f5f5;
-  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
   padding-bottom: 50px;
 }
 
@@ -284,6 +281,7 @@ h1 {
 
 #bannerTitle {
   margin: auto;
+  font-size: 20px;
 }
 
 #logos {
