--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -244,11 +244,6 @@ body {
   }
 }
 
-.shadow-box {
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-
 h1 {
   text-align: center;
   font-size: 48px;
@@ -258,6 +253,7 @@ h1 {
 .alzarbtn {
   margin-top: -6px;
 }
+
 #vimeoCentral {
   border-radius: 20px;
 }
@@ -266,7 +262,8 @@ h1 {
   position: relative;
   color: #f5f5f5;
   width: 110%;
-  background-image: url("../public/banner.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../public/banner.png");
   padding-top: 70px;
   margin-left: -15px;
   background-size: cover;
@@ -384,4 +381,37 @@ h1 {
   left: 61%;
   color: rgb(37, 209, 254);
   font-size: 60px;
+}
+
+.logos img {
+  display: flex;
+  justify-content: center;
+  transition: slide 9s;
+}
+
+.slider-image {
+  width: 20%;
+}
+
+.marquee-container {
+  background-color: #ffffff;
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    white 20%,
+    white 80%,
+    transparent
+  );
+
+  .slider-image {
+    opacity: 1;
+    visibility: visible;
+  }
 }
