--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -594,3 +594,72 @@ h1 {
     }
   }
 }
+
+.casosDeUso {
+  .texto-Centrado {
+    margin-top: 10px;
+    margin-left: -5px;
+    h2 {
+      margin-top: 10px;
+    }
+
+    p {
+      font-size: 15px;
+      width: 99%;
+    }
+  }
+
+  img {
+    margin-left: -8px;
+    border-radius: 25px;
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+  }
+}
+
+#casosDeUso1 {
+  width: 100%;
+  transition: width 0.45s ease-in-out;
+}
+
+#casosDeUso1:hover {
+  width: 200%;
+  transition: all 0.45s ease-in-out;
+}
+
+.col-md-4:has(#casosDeUso1:hover) ~ .col-md-4 #casosDeUso2 {
+  translate: 200%;
+  width: 50%;
+  transition: all 0.55s ease-in-out;
+}
+
+.col-md-4:has(#casosDeUso1:hover) ~ .col-md-4 #casosDeUso3 {
+  translate: 100%;
+  width: 50%;
+  transition: all 0.4s ease-in-out;
+}
+
+#casosDeUso2 {
+  width: 100%;
+  margin-left: 0%;
+  transition: all 0.45s ease-in-out;
+
+  &:hover {
+    width: 200%;
+    margin-left: -50%;
+    transition: all 0.45s ease-in-out;
+  }
+}
+
+#casosDeUso3 {
+  width: 100%;
+  margin-left: 0%;
+  transition: all 0.7s ease-in-out;
+
+  &:hover {
+    width: 200%;
+    margin-left: -100%;
+    transition: all 0.45s ease-in-out;
+  }
+}
